--- a/generate/resources/templates/class.html
+++ b/generate/resources/templates/class.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+	<meta charset="utf-8">
 
 	<title>{{= class.Name }} Reference</title>
 	{{include: 'resources/templates/resources.html'}}
