removed silly manual indentation

--- a/generate/resources/templates/index.html
+++ b/generate/resources/templates/index.html
@@ -20,7 +20,7 @@
 
 			<div id="box-content">
 				<ul id="hierarchy-list">
-{{= format.ClassTree(tree,5) }}
+					{{= format.ClassTree(tree) }}
 				</ul>
 			</div>
 		</div>
