removed unused IDs on member lists

--- a/generate/resources/templates/EventList.html
+++ b/generate/resources/templates/EventList.html
@@ -1,4 +1,4 @@
-<table id="Event-list" class="member-list">
+<table class="member-list">
 	<tr>
 		<th class="col-icon"></th>
 		<th class="col-name">Event</th>
