--- a/generate/resources/templates/PropertyList.html
+++ b/generate/resources/templates/PropertyList.html
@@ -1,4 +1,4 @@
-<table id="Property-list" class="member-list">
+<table class="member-list">
 	<tr>
 		<th class="col-icon"></th>
 		<th class="col-name">Property</th>
