--- a/generate/resources/templates/YieldFunctionList.html
+++ b/generate/resources/templates/YieldFunctionList.html
@@ -1,4 +1,4 @@
-<table id="YieldFunction-list" class="member-list">
+<table class="member-list">
 	<tr>
 		<th class="col-return-type">Returns</th>
 		<th class="col-icon"></th>
