renamed #hierarchy to #hierarchy-nav

--- a/generate/resources/templates/class.html
+++ b/generate/resources/templates/class.html
@@ -19,7 +19,7 @@
 			</div>
 			<div id="box-content">
 				<div id="api-docs">
-					<div id="hierarchy">
+					<div id="hierarchy-nav">
 					{{ if #class.Superclasses > 0 then }}
 						<div id="superclasses">
 							<p><b>Inherits:</b></p>
