--- a/generate/resources/css/ref.css
+++ b/generate/resources/css/ref.css
@@ -108,7 +108,7 @@ table .api-enum-item-icon {
 	font-size   : 12px;
 }
 
-#hierarchy {
+#hierarchy-nav {
 	float        : right;
 	margin       : 1em;
 	padding-left : 8px;
