renamed #nav-hierarchy to #return-link

--- a/generate/resources/templates/class.html
+++ b/generate/resources/templates/class.html
@@ -15,7 +15,7 @@
 		<div id="ref-box">
 			<div id="header">
 				{{= format.ClassIcon(class.Icon) }}<h1>{{= class.Name }}</h1>
-				<a id="nav-hierarchy" href="/api">Back to hierarchy{{= format.MemberIcon(3) }}</a>
+				<a id="return-link" href="/api">Back to hierarchy{{= format.MemberIcon(3) }}</a>
 			</div>
 			<div id="box-content">
 				<div id="api-docs">
