--- a/generate/resources/templates/class.html
+++ b/generate/resources/templates/class.html
@@ -15,7 +15,9 @@
 		<div id="ref-box">
 			<div id="header">
 				{{= format.ClassIcon(class.Icon) }}<h1>{{= class.Name }}</h1>
-				<a id="return-link" href="/api">Back to hierarchy{{= format.MemberIcon(3) }}</a>
+				<span id="header-items">
+					<a id="return-link" href="/api">Back to hierarchy{{= format.MemberIcon(3) }}</a>
+				</span>
 			</div>
 			<div id="box-content">
 				<div id="api-docs">
