--- a/generate/resources/templates/index.html
+++ b/generate/resources/templates/index.html
@@ -15,9 +15,10 @@
 		<div id="ref-box">
 			<div id="header">
 				<h1>Class Hierarchy</h1>
-				<noscript id="searchMessage">Searching requires javascript.</noscript>
+				<span id="header-items">
+					<noscript id="search-message">Searching requires javascript.</noscript>
+				</span>
 			</div>
-
 			<div id="box-content">
 				<ul id="hierarchy-list">
 					{{= format.ClassTree(tree) }}
