renamed #sectionMembers to members

--- a/generate/resources/templates/class.html
+++ b/generate/resources/templates/class.html
@@ -62,7 +62,7 @@
 							{{= format.Tags(class.TagList) }}
 						</p>
 					{{ end }}
-						<div id="sectionMembers">
+						<div id="members">
 							<h2>Members</h2>
 					{{ for i = 1,#class.Members do }}
 						{{ local member = class.Members[i] }}
