--- a/generate/resources/templates/footer.html
+++ b/generate/resources/templates/footer.html
@@ -1,3 +1,3 @@
 <div id="footer">
-	Style is totally not a blatant <a href="http://qt-project.org/">Qt Project</a> rip-off.
+	<span>Style is totally not a blatant <a href="http://qt-project.org/">Qt Project</a> rip-off.</span>
 </div>
