changed "parameters" to "arguments"

--- a/generate/resources/templates/CallbackList.html
+++ b/generate/resources/templates/CallbackList.html
@@ -11,7 +11,7 @@
 	<tr>
 		<td class="col-return-type">{{= format.Type(member.List[i].ReturnType) }}</td>
 		<td class="col-icon">{{= format.MemberIcon(member.List[i].Icon) }}</td>
-		<td class="col-name">{{= format.MemberName(member.List[i]) }} {{= format.Arguments(member.List[i].Parameters) }}</td>
+		<td class="col-name">{{= format.MemberName(member.List[i]) }} {{= format.Arguments(member.List[i].Arguments) }}</td>
 	{{ if #member.List[i].TagList > 0 then }}
 		<td class="col-tags">{{= format.Tags(member.List[i].TagList) }}</td>
 	{{ end }}
