added API difference page

--- a/generate/resources/templates/index.html
+++ b/generate/resources/templates/index.html
@@ -20,6 +20,9 @@
 				</span>
 			</div>
 			<div id="box-content">
+				<div id="diff-message">
+					<span class="diff-date">{{= format.Date(diffs[1].Date) }}</span>: <a href="/api/diff.html">New changes</a> have been made to the API.
+				</div>
 				<ul id="hierarchy-list">
 					{{= format.ClassTree(tree) }}
 				</ul>
