--- a/generate/resources/css/ref.css
+++ b/generate/resources/css/ref.css
@@ -199,3 +199,18 @@ table.member-list .col-return-type {
 	margin-right : 4px;
 	margin-left  : 4px;
 }
+
+.diff-date {
+	font-weight : bold;
+}
+
+.diff-version {
+	font-family : Consolas, "Lucida Console", monospace;
+}
+
+.diff-arg-list .api-argument {
+	padding       : 0px 4px;
+	background    : rgb(246, 246, 246);
+	border        : 1px solid rgb(218, 218, 218);
+	border-radius : 4px;
+}
