--- a/generate/resources/templates/class.html
+++ b/generate/resources/templates/class.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="icon" type="image/png" href="/api/img/icon-site.png">
 
 	<title>{{= class.Name }} Reference</title>
 	{{= resources['api.css'] }}
