--- a/generate/resources/templates/index.html
+++ b/generate/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="icon" type="image/png" href="/api/img/icon-site.png">
 
 	<title>Roblox API Reference</title>
 	{{= resources['api.css'] }}
