refactored favicon as a resource type

--- a/generate/resources/templates/diff.html
+++ b/generate/resources/templates/diff.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="icon" type="image/png" href="/api/img/icon-site.png">
+	{{= resources['favicon16'] }}
 
 	<title>Roblox API Differences</title>
 	{{= resources['api.css'] }}
