enhanced diff page with collapsible lists

--- a/generate/resources/templates/diff.html
+++ b/generate/resources/templates/diff.html
@@ -8,6 +8,7 @@
 	{{= resources['api.css'] }}
 	{{= resources['ref.css'] }}
 	{{= resources['jquery.js'] }}
+	{{= resources['collapse.js'] }}
 	{{= resources['fuse.js'] }}
 	{{= resources['search.js'] }}
 </head>
