--- a/generate/resources/templates/EnumList.html
+++ b/generate/resources/templates/EnumList.html
@@ -3,14 +3,14 @@
 	{{ local enum = class.Enums[i] }}
 	<table id="type{{= enum.Name }}" class="enum-item-list">
 		<tr>
-			<th class="col-icon">{{= format.EnumIcon() }}</th>
+			<th class="col-icon"><span class="api-enum-icon"></span></th>
 			<th class="col-name" colspan="2">{{= enum.Name }}</th>
 		</tr>
 	{{ for i = 1,#enum.Items do}}
 		<tr>
-			<td class="col-icon">{{= format.EnumItemIcon() }}</td>
-			<td class="col-value">{{= format.EnumItemValue(enum.Items[i].Value) }}</td>
-			<td class="col-name">{{= format.EnumItemName(enum.Items[i].Name) }}</td>
+			<td class="col-icon"><span class="api-enum-item-icon"></span></td>
+			<td class="col-value"><span class="api-enum-item-value">{{= enum.Items[i].Value }}</span></td>
+			<td class="col-name"><span class="api-enum-item-name">{{= enum.Items[i].Name }}</span></td>
 		</tr>
 	{{ end }}
 	</table>
