--- a/generate/resources/templates/diff.html
+++ b/generate/resources/templates/diff.html
@@ -18,7 +18,8 @@
 			<div id="header">
 				<h1>API Differences</h1>
 				<span id="header-items">
-					<a id="return-link" href="/api">Back to hierarchy{{= format.MemberIcon(3) }}</a>
+					{{ local icon = 3 }}
+					<a id="return-link" href="/api">Back to hierarchy{{include: 'resources/templates/MemberIcon.html' }}</a>
 				</span>
 			</div>
 			<div id="box-content">
@@ -26,14 +27,82 @@
 				<ul id="diff-versions">
 				{{ for i = 1,#diffs do }}
 					<li{{= i == 1 and ' id="latest"' or ''}}>
-						<span class="diff-date">{{= format.Date(diffs[i].Date) }}</span> ( <span class="diff-version">{{= diffs[i].PreviousVersion }}</span> → <span class="diff-version">{{= diffs[i].CurrentVersion }}</span> )
-						{{ local d = diffs[i].Differences }}
+						<span class="diff-date">{{= format.date(diffs[i].Date) }}</span> ( <span class="diff-version">{{= diffs[i].PreviousVersion }}</span> → <span class="diff-version">{{= diffs[i].CurrentVersion }}</span> )
+					{{ local d = diffs[i].Differences }}
 						<ul class="diff-list">
-						{{ for i = 1,#d do }}
+					{{ for i = 1,#d do }}
+						{{ local diffitem = d[i] }}
+						{{ local type = diffitem[1] }}
+						{{ local subtype = diffitem[2] }}
+						{{ local item = diffitem[3] }}
+						{{ local arg = diffitem[4] }}
 							<li>
-								{{= format.Diff(d[i]) }}
-							</li>
+						{{ if type == -1 then }}
+							{{ if subtype == 'Item' then }}
+								Removed {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}
+							{{ elseif subtype == 'Class' or subtype == 'Enum' then }}
+								Removed {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}
+								{{ if #arg > 0 then }}
+								<ul>
+								{{ for i = 1,#arg do }}
+									{{ local item = arg[i] }}
+									<li>Removed {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}</li>
+								{{ end }}
+								</ul>
+								{{ end }}
+							{{ elseif subtype == 'Tag' then }}
+								Removed {{= arg }} tag from {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}
+							{{ end }}
+						{{ elseif type == 1 then }}
+							{{ if subtype == 'Item' then }}
+								Added {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}
+							{{ elseif subtype == 'Class' or subtype == 'Enum' then }}
+								Added {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}
+								{{ if #arg > 0 then }}
+								<ul>
+								{{ for i = 1,#arg do }}
+									{{ local item = arg[i] }}
+									<li>Added {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}</li>
+								{{ end }}
+								</ul>
+								{{ end }}
+							{{ elseif subtype == 'Tag' then }}
+								Added {{= arg }} tag to {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}
+							{{ end }}
+						{{ elseif type == 0 then }}
+							{{ if subtype == 'Superclass' then }}
+								Changed superclass of {{include: 'resources/templates/DiffItemName.html'}} from {{ if item.Superclass then }}<a class="api-class-name" href="{{= format.url.class(item.Superclass) }}">{{= item.Superclass }}</a>{{ else }}(none){{ end }} to {{if arg then }}<a class="api-class-name" href="{{= format.url.class(arg) }}">{{= arg }}</a>{{ else }}(none){{ end }}
+							{{ elseif subtype == 'ValueType' then }}
+								Changed value type of {{include: 'resources/templates/DiffItemName.html'}} from <a class="api-value-type" href="{{= format.url.type(item.ValueType) }}">{{= item.ValueType }}</a> to <a class="api-value-type" href="{{= format.url.type(arg) }}">{{= arg }}</a>
+							{{ elseif subtype == 'ReturnType' then }}
+								Changed return type of {{include: 'resources/templates/DiffItemName.html'}} from <a class="api-value-type" href="{{= format.url.type(item.ReturnType) }}">{{= item.ReturnType }}</a> to <a class="api-value-type" href="{{= format.url.type(arg) }}">{{= arg }}</a>
+							{{ elseif subtype == 'Arguments' then }}
+								{{ local arguments = item.Arguments }}
+								Changed arguments of {{include: 'resources/templates/DiffItemName.html'}} {{include: 'resources/templates/Arguments.html'}}
+								<ol class="diff-arg-list">
+							{{ for i = 1,#arg do }}
+								{{ local d = arg[i] }}
+								{{ if d[1] == 1 then }}
+									{{ local argument = d[3] }}
+									<li>Inserted {{include: 'resources/templates/Argument.html'}} as {{= format.ordinal(d[2]) }} argument</li>
+								{{ elseif d[1] == 2 then }}
+									<li>Removed {{= format.ordinal(d[2]) }} argument</li>
+								{{ elseif d[1] == 3 then }}
+									<li>Swapped {{= format.ordinal(d[2]) }} and {{= format.ordinal(d[3]) }} arguments</li>
+								{{ elseif d[1] == 4 then }}
+									{{ local argument = d[3] }}
+									<li>Replaced {{= format.ordinal(d[2]) }} argument with {{include: 'resources/templates/Argument.html'}}</li>
+								{{ end }}
+							{{ end }}
+								</ol>
+							{{ elseif subtype == 'Value' then }}
+								Changed value of enum item {{include: 'resources/templates/DiffItemName.html'}} from {{= item.Value }} to {{= arg }}
+							{{ elseif subtype == 'Security' then }}
+								Changed security of {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}} from {{= arg }} to {{= diffitem[5] }}
+							{{ end }}
 						{{ end }}
+							</li>
+					{{ end }}
 						</ul>
 					</li>
 				{{ end }}
