--- a/generate/resources/templates/MemberIcon.html
+++ b/generate/resources/templates/MemberIcon.html
@@ -1,1 +1,1 @@
-<span class="api-member-icon" style="background-position:-{{= icon*16 }}px"></span>
+<span class="api-member-icon" style="background-position:-{{= html(icon*16) }}px"></span>
