--- a/generate/resources/templates/EventList.html
+++ b/generate/resources/templates/EventList.html
@@ -12,7 +12,7 @@
 	{{ local icon = member.Icon }}
 		<td class="col-icon">{{include: 'resources/templates/MemberIcon.html'}}</td>
 	{{ local arguments = member.Arguments }}
-		<td class="col-name"><a class="api-member-name{{if member.Tags.preliminary then }} api-preliminary{{ end }}{{ if member.Tags.deprecated then }} api-deprecated{{ end }}" href="{{= format.url.member(member.Name) }}">{{= member.Name }}</a> {{include: 'resources/templates/Arguments.html' }}</td>
+		<td class="col-name"><a class="api-member-name{{if member.Tags.preliminary then }} api-preliminary{{ end }}{{ if member.Tags.deprecated then }} api-deprecated{{ end }}" href="{{= html(format.url.member(member.Name)) }}">{{= html(member.Name) }}</a> {{include: 'resources/templates/Arguments.html' }}</td>
 	{{ if #member.TagList > 0 then }}
 		{{ local tags = member.TagList }}
 		<td class="col-tags">{{include: 'resources/templates/Tags.html'}}</td>
