--- a/generate/resources/templates/PropertyList.html
+++ b/generate/resources/templates/PropertyList.html
@@ -12,8 +12,8 @@
 	<tr>
 	{{ local icon = member.Icon }}
 		<td class="col-icon">{{include: 'resources/templates/MemberIcon.html'}}</td>
-		<td class="col-name"><a class="api-member-name{{if member.Tags.preliminary then }} api-preliminary{{ end }}{{ if member.Tags.deprecated then }} api-deprecated{{ end }}" href="{{= format.url.member(member.Name) }}">{{= member.Name }}</a></td>
-		<td class="col-value-type"><a class="api-value-type" href="{{= format.url.type(member.ValueType) }}">{{= member.ValueType }}</a></td>
+		<td class="col-name"><a class="api-member-name{{if member.Tags.preliminary then }} api-preliminary{{ end }}{{ if member.Tags.deprecated then }} api-deprecated{{ end }}" href="{{= html(format.url.member(member.Name)) }}">{{= html(member.Name) }}</a></td>
+		<td class="col-value-type"><a class="api-value-type" href="{{= html(format.url.type(member.ValueType)) }}">{{= html(member.ValueType) }}</a></td>
 	{{ if #member.TagList > 0 then }}
 		{{ local tags = member.TagList }}
 		<td class="col-tags">{{include: 'resources/templates/Tags.html'}}</td>
