--- a/generate/resources/templates/Tags.html
+++ b/generate/resources/templates/Tags.html
@@ -1,1 +1,1 @@
-{{ if #tags > 0 then }}<span class="api-tag">{{= tags[1] }}</span>{{ for i = 2,#tags do }}, <span class="api-tag">{{= tags[i] }}</span>{{ end }}{{ end }}
+{{ if #tags > 0 then }}<span class="api-tag">{{= html(tags[1]) }}</span>{{ for i = 2,#tags do }}, <span class="api-tag">{{= html(tags[i]) }}</span>{{ end }}{{ end }}
