--- a/generate/resources/templates/YieldFunctionList.html
+++ b/generate/resources/templates/YieldFunctionList.html
@@ -10,11 +10,11 @@
 {{ for i = 1,#memberType.List do }}
 	{{ local member = memberType.List[i] }}
 	<tr>
-		<td class="col-return-type"><a class="api-value-type" href="{{= format.url.type(member.ReturnType) }}">{{= member.ReturnType }}</a></td>
+		<td class="col-return-type"><a class="api-value-type" href="{{= html(format.url.type(member.ReturnType)) }}">{{= html(member.ReturnType) }}</a></td>
 	{{ local icon = member.Icon }}
 		<td class="col-icon">{{include: 'resources/templates/MemberIcon.html'}}</td>
 	{{ local arguments = member.Arguments }}
-		<td class="col-name"><a class="api-member-name{{if member.Tags.preliminary then }} api-preliminary{{ end }}{{ if member.Tags.deprecated then }} api-deprecated{{ end }}" href="{{= format.url.member(member.Name) }}">{{= member.Name }}</a> {{include: 'resources/templates/Arguments.html' }}</td>
+		<td class="col-name"><a class="api-member-name{{if member.Tags.preliminary then }} api-preliminary{{ end }}{{ if member.Tags.deprecated then }} api-deprecated{{ end }}" href="{{= html(format.url.member(member.Name)) }}">{{= html(member.Name) }}</a> {{include: 'resources/templates/Arguments.html' }}</td>
 	{{ if #member.TagList > 0 then }}
 		{{ local tags = member.TagList }}
 		<td class="col-tags">{{include: 'resources/templates/Tags.html'}}</td>
