--- a/generate/resources/templates/diff.html
+++ b/generate/resources/templates/diff.html
@@ -26,8 +26,12 @@
 				This page lists the differences between versions of the ROBLOX Lua API.
 				<ul id="diff-versions">
 				{{ for i = 1,#diffs do }}
-					<li{{= i == 1 and ' id="latest"' or ''}}>
-						<span class="diff-date">{{= format.date(diffs[i].Date) }}</span> ( <span class="diff-version">{{= diffs[i].PreviousVersion }}</span> → <span class="diff-version">{{= diffs[i].CurrentVersion }}</span> )
+					{{ if i == 1 then }}
+					<li id="latest">
+					{{ else }}
+					<li>
+					{{ end }}
+						<span class="diff-date">{{= html(format.date(diffs[i].Date)) }}</span> ( <span class="diff-version">{{= html(diffs[i].PreviousVersion) }}</span> → <span class="diff-version">{{= html(diffs[i].CurrentVersion) }}</span> )
 					{{ local d = diffs[i].Differences }}
 						<ul class="diff-list">
 					{{ for i = 1,#d do }}
@@ -39,43 +43,43 @@
 							<li>
 						{{ if type == -1 then }}
 							{{ if subtype == 'Item' then }}
-								Removed {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}
+								Removed {{= html(item.type) }} {{include: 'resources/templates/DiffItemName.html'}}
 							{{ elseif subtype == 'Class' or subtype == 'Enum' then }}
-								Removed {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}
+								Removed {{= html(item.type) }} {{include: 'resources/templates/DiffItemName.html'}}
 								{{ if #arg > 0 then }}
 								<ul>
 								{{ for i = 1,#arg do }}
 									{{ local item = arg[i] }}
-									<li>Removed {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}</li>
+									<li>Removed {{= html(item.type) }} {{include: 'resources/templates/DiffItemName.html'}}</li>
 								{{ end }}
 								</ul>
 								{{ end }}
 							{{ elseif subtype == 'Tag' then }}
-								Removed {{= arg }} tag from {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}
+								Removed {{= html(arg) }} tag from {{= html(item.type) }} {{include: 'resources/templates/DiffItemName.html'}}
 							{{ end }}
 						{{ elseif type == 1 then }}
 							{{ if subtype == 'Item' then }}
-								Added {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}
+								Added {{= html(item.type) }} {{include: 'resources/templates/DiffItemName.html'}}
 							{{ elseif subtype == 'Class' or subtype == 'Enum' then }}
-								Added {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}
+								Added {{= html(item.type) }} {{include: 'resources/templates/DiffItemName.html'}}
 								{{ if #arg > 0 then }}
 								<ul>
 								{{ for i = 1,#arg do }}
 									{{ local item = arg[i] }}
-									<li>Added {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}</li>
+									<li>Added {{= html(item.type) }} {{include: 'resources/templates/DiffItemName.html'}}</li>
 								{{ end }}
 								</ul>
 								{{ end }}
 							{{ elseif subtype == 'Tag' then }}
-								Added {{= arg }} tag to {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}}
+								Added {{= html(arg) }} tag to {{= html(item.type) }} {{include: 'resources/templates/DiffItemName.html'}}
 							{{ end }}
 						{{ elseif type == 0 then }}
 							{{ if subtype == 'Superclass' then }}
-								Changed superclass of {{include: 'resources/templates/DiffItemName.html'}} from {{ if item.Superclass then }}<a class="api-class-name" href="{{= format.url.class(item.Superclass) }}">{{= item.Superclass }}</a>{{ else }}(none){{ end }} to {{if arg then }}<a class="api-class-name" href="{{= format.url.class(arg) }}">{{= arg }}</a>{{ else }}(none){{ end }}
+								Changed superclass of {{include: 'resources/templates/DiffItemName.html'}} from {{ if item.Superclass then }}<a class="api-class-name" href="{{= html(format.url.class(item.Superclass)) }}">{{= html(item.Superclass) }}</a>{{ else }}(none){{ end }} to {{if arg then }}<a class="api-class-name" href="{{= html(format.url.class(arg)) }}">{{= html(arg) }}</a>{{ else }}(none){{ end }}
 							{{ elseif subtype == 'ValueType' then }}
-								Changed value type of {{include: 'resources/templates/DiffItemName.html'}} from <a class="api-value-type" href="{{= format.url.type(item.ValueType) }}">{{= item.ValueType }}</a> to <a class="api-value-type" href="{{= format.url.type(arg) }}">{{= arg }}</a>
+								Changed value type of {{include: 'resources/templates/DiffItemName.html'}} from <a class="api-value-type" href="{{= html(format.url.type(item.ValueType)) }}">{{= html(item.ValueType) }}</a> to <a class="api-value-type" href="{{= html(format.url.type(arg)) }}">{{= html(arg) }}</a>
 							{{ elseif subtype == 'ReturnType' then }}
-								Changed return type of {{include: 'resources/templates/DiffItemName.html'}} from <a class="api-value-type" href="{{= format.url.type(item.ReturnType) }}">{{= item.ReturnType }}</a> to <a class="api-value-type" href="{{= format.url.type(arg) }}">{{= arg }}</a>
+								Changed return type of {{include: 'resources/templates/DiffItemName.html'}} from <a class="api-value-type" href="{{= html(format.url.type(item.ReturnType)) }}">{{= html(item.ReturnType) }}</a> to <a class="api-value-type" href="{{= html(format.url.type(arg)) }}">{{= html(arg) }}</a>
 							{{ elseif subtype == 'Arguments' then }}
 								{{ local arguments = item.Arguments }}
 								Changed arguments of {{include: 'resources/templates/DiffItemName.html'}} {{include: 'resources/templates/Arguments.html'}}
@@ -84,21 +88,21 @@
 								{{ local d = arg[i] }}
 								{{ if d[1] == 1 then }}
 									{{ local argument = d[3] }}
-									<li>Inserted {{include: 'resources/templates/Argument.html'}} as {{= format.ordinal(d[2]) }} argument</li>
+									<li>Inserted {{include: 'resources/templates/Argument.html'}} as {{= html(format.ordinal(d[2])) }} argument</li>
 								{{ elseif d[1] == 2 then }}
-									<li>Removed {{= format.ordinal(d[2]) }} argument</li>
+									<li>Removed {{= html(format.ordinal(d[2])) }} argument</li>
 								{{ elseif d[1] == 3 then }}
-									<li>Swapped {{= format.ordinal(d[2]) }} and {{= format.ordinal(d[3]) }} arguments</li>
+									<li>Swapped {{= html(format.ordinal(d[2])) }} and {{= html(format.ordinal(d[3])) }} arguments</li>
 								{{ elseif d[1] == 4 then }}
 									{{ local argument = d[3] }}
-									<li>Replaced {{= format.ordinal(d[2]) }} argument with {{include: 'resources/templates/Argument.html'}}</li>
+									<li>Replaced {{= html(format.ordinal(d[2])) }} argument with {{include: 'resources/templates/Argument.html'}}</li>
 								{{ end }}
 							{{ end }}
 								</ol>
 							{{ elseif subtype == 'Value' then }}
-								Changed value of enum item {{include: 'resources/templates/DiffItemName.html'}} from {{= item.Value }} to {{= arg }}
+								Changed value of enum item {{include: 'resources/templates/DiffItemName.html'}} from {{= html(item.Value) }} to {{= html(arg) }}
 							{{ elseif subtype == 'Security' then }}
-								Changed security of {{= item.type }} {{include: 'resources/templates/DiffItemName.html'}} from {{= arg }} to {{= diffitem[5] }}
+								Changed security of {{= html(item.type) }} {{include: 'resources/templates/DiffItemName.html'}} from {{= html(arg) }} to {{= html(diffitem[5]) }}
 							{{ end }}
 						{{ end }}
 							</li>
