--- a/generate/resources/templates/diff.html
+++ b/generate/resources/templates/diff.html
@@ -26,12 +26,9 @@
 				This page lists the differences between versions of the ROBLOX Lua API.
 				<ul id="diff-versions">
 				{{ for i = 1,#diffs do }}
-					{{ if i == 1 then }}
-					<li id="latest">
-					{{ else }}
 					<li>
-					{{ end }}
-						<span class="diff-date">{{= html(format.date(diffs[i].Date)) }}</span> ( <span class="diff-version">{{= html(diffs[i].PreviousVersion) }}</span> → <span class="diff-version">{{= html(diffs[i].CurrentVersion) }}</span> )
+						<a class="anchor" id="{{= html(format.difflink(diffs[i])) }}"></a>
+						<span class="diff-date">{{= html(format.date(diffs[i].Date)) }}</span> ( <span class="diff-version">{{= html(diffs[i].PreviousVersion) }}</span> → <span class="diff-version">{{= html(diffs[i].CurrentVersion) }}</span> )<a class="permalink" href="#{{= html(format.difflink(diffs[i])) }}"> ¶</a>
 					{{ local d = diffs[i].Differences }}
 						<ul class="diff-list">
 					{{ for i = 1,#d do }}
