--- a/generate/resources/css/ref.css
+++ b/generate/resources/css/ref.css
@@ -187,12 +187,16 @@ table.member-list .col-return-type {
 }
 
 #member-descriptions > div > h3 {
-	margin-left : -0.5em;
-	padding     : 0.5em;
+	margin           : 1em -0.5em 0px;
+	padding          : 0.5em;
+	background-color : rgb(246, 246, 246);
+	border           : 1px solid rgb(222, 222, 222);
+	border-radius    : 4px;
 }
+
 #member-descriptions > div:target > h3 {
 	background-color : rgb(222, 240, 180);
-	border-radius    : 4px;
+	border-color     : rgb(203, 219, 164);
 }
 
 #member-descriptions .api-member-icon {
