changed css class `diff-version` to `api-version`

--- a/generate/resources/css/ref.css
+++ b/generate/resources/css/ref.css
@@ -208,7 +208,7 @@ table.member-list .col-return-type {
 	font-weight : bold;
 }
 
-.diff-version {
+.api-version {
 	font-family : Consolas, "Lucida Console", monospace;
 }
 
