--- a/generate/resources/templates/diff.html
+++ b/generate/resources/templates/diff.html
@@ -28,7 +28,7 @@
 				{{ for i = 1,#diffs do }}
 					<li>
 						<a class="anchor" id="{{= html(format.url.version(diffs[i].CurrentVersion,true)) }}"></a>
-						<span class="diff-date">{{= html(format.date(diffs[i].Date)) }}</span> ( <span class="diff-version">{{= html(diffs[i].PreviousVersion) }}</span> → <span class="diff-version">{{= html(diffs[i].CurrentVersion) }}</span> )<a class="permalink" href="{{= html(format.url.version(diffs[i].CurrentVersion)) }}"></a>
+						<span class="diff-date">{{= html(format.date(diffs[i].Date)) }}</span> ( <span class="api-version">{{= html(diffs[i].PreviousVersion) }}</span> → <span class="api-version">{{= html(diffs[i].CurrentVersion) }}</span> )<a class="permalink" href="{{= html(format.url.version(diffs[i].CurrentVersion)) }}"></a>
 					{{ local d = diffs[i].Differences }}
 						<ul class="diff-list">
 					{{ for i = 1,#d do }}
