class tree generated from diffs;
displays which version a class was added or removed;
dumps with missing data (superclasses, enums) are repaired instead of ignored

--- a/generate/resources/css/ref.css
+++ b/generate/resources/css/ref.css
@@ -212,6 +212,14 @@ table.member-list .col-return-type {
 	font-family : Consolas, "Lucida Console", monospace;
 }
 
+.version-added {
+	color: DarkGreen;
+}
+
+.version-removed {
+	color: DarkRed;
+}
+
 .diff-arg-list .api-argument {
 	padding       : 0px 4px;
 	background    : rgb(246, 246, 246);
